# simple-gtk-drawspace

./: Makefile  Makefile.inc  README.md
doc/: documentation.tex
source/: CMakeLists.txt  SimpleMakefile  main.cpp  simple-gtk-drawspace.cpp  simple-gtk-drawspace.h
source/example/: CMakeLists.txt  main.cpp
source/game/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
source/libsgds/: CMakeLists.txt  simple-gtk-drawspace.cpp  simple-gtk-drawspace.h
